Fix item description and link to videocall feature

--- a/public/items.html
+++ b/public/items.html
@@ -47,10 +47,9 @@
 		<div class="texto">
 		<div class="imagen"></div><br>
 		<div class="space"></div>
-		<h1 class="listitle"><a  onclick="prof()"class="listitle">PSP SILVER 887</a></h1><br><br><br><br>
-		<a href="#" class="button pink price click">10€</a><br><br><br>
- Etiam ante sapien, volutpat et lobortis sed, porttitor eu neque. Cras nec aliquet purus. Suspendisse fermentum venenatis ligula, auctor feugiat metus ultrices in. Nam felis metus, eleifend eget scelerisque id, laoreet eget libero. <br> Quisque eget aliquet sapien, sed vulputate erat. Mauris eget pellentesque mauris. Duis efficitur ipsum ultricies mattis aliquam. Etiam vestibulum nulla vitae urna iaculis sagittis. 
- Mauris eget pellentesque mauris. Duis efficitur ipsum ultricies mattis aliquam. Etiam vestibulum nulla vitae urna iaculis sagittis. 
+		<h1 class="listitle"><a  onclick="prof()"class="listitle">Linterna Tadhack</a></h1><br><br><br><br>
+		<a href="#" class="button pink price click">3€</a><br><br><br>
+ No se enciende, creo que la bombilla va bien, el problema debe estar en otro lado.
 		</div>
 	</article>
 	<div class="profesionales">
@@ -58,7 +57,7 @@
 					<div class="profesional animated fadeIn">
 						<div class="profimg">
 							<div class="greyimg grn"></div>
-							<div class="name inc"><a href="carlos.html" class="lite" >Carlos&nbsp  <i class="fa fa-phone phone" aria-hidden="true"></i>
+							<div class="name inc"><a href="/videocall?resource_id=ciclo_room&display_name=marcelo" class="lite" >Carlos&nbsp  <i class="fa fa-phone phone" aria-hidden="true"></i>
 </a></div>
 							<div class="stars">
 		<i class="fa fa-star pnk" aria-hidden="true"></i>
@@ -66,22 +65,7 @@
 		<i class="fa fa-star gry" aria-hidden="true"></i>
 							</div>
 		<br>
-							<div class="quote">"Mi especialidad es reparar videoconsolas"</div>
-							<div class="online grn"></div>
-							</div>
-						</div>
-					</div>
-					<div class="profesional animated fadeIn">
-						<div class="profimg">
-							<div class="greyimg"></div>
-							<div class="name inc">Carlos</div>
-							<div class="stars">
-		<i class="fa fa-star pnk" aria-hidden="true"></i>
-		<i class="fa fa-star pnk" aria-hidden="true"></i>
-		<i class="fa fa-star gry" aria-hidden="true"></i>
-							</div>
-		<br>
-							<div class="quote">"Mi especialidad es reparar videoconsolas"</div>
+							<div class="quote">"Mi especialidad es reparar objetos eléctricos"</div>
 							<div class="online"></div>
 							</div>
 						</div>
@@ -89,14 +73,29 @@
 					<div class="profesional animated fadeIn">
 						<div class="profimg">
 							<div class="greyimg"></div>
-							<div class="name inc">Carlos</div>
+							<div class="name inc">Javier</div>
 							<div class="stars">
 		<i class="fa fa-star pnk" aria-hidden="true"></i>
 		<i class="fa fa-star pnk" aria-hidden="true"></i>
 		<i class="fa fa-star gry" aria-hidden="true"></i>
 							</div>
 		<br>
-							<div class="quote">"Mi especialidad es reparar videoconsolas"</div>
+							<div class="quote">"Especialista en iluminación"</div>
+							<div class="online"></div>
+							</div>
+						</div>
+					</div>
+					<div class="profesional animated fadeIn">
+						<div class="profimg">
+							<div class="greyimg"></div>
+							<div class="name inc">Alberto</div>
+							<div class="stars">
+		<i class="fa fa-star pnk" aria-hidden="true"></i>
+		<i class="fa fa-star pnk" aria-hidden="true"></i>
+		<i class="fa fa-star gry" aria-hidden="true"></i>
+							</div>
+		<br>
+							<div class="quote">"Arreglo todo tipo de objetos eléctricos"</div>
 							<div class="online"></div>
 							</div>
 						</div>
@@ -109,7 +108,7 @@
 		<div class="imagen"></div><br>
 		<div class="space"></div>
 		<h1 class="listitle"><a class="listitle">PSP SILVER 887</a></h1><br><br><br><br>
-		<a href="#" class="button pink price click" onclick="prof()">10€</a><br><br><br>
+		<a href="#" class="button pink price click" onclick="prof()">18€</a><br><br><br>
  Etiam ante sapien, volutpat et lobortis sed, porttitor eu neque. Cras nec aliquet purus. Suspendisse fermentum venenatis ligula, auctor feugiat metus ultrices in. Nam felis metus, eleifend eget scelerisque id, laoreet eget libero. <br> Quisque eget aliquet sapien, sed vulputate erat. Mauris eget pellentesque mauris. Duis efficitur ipsum ultricies mattis aliquam. Etiam vestibulum nulla vitae urna iaculis sagittis. 
  Mauris eget pellentesque mauris. Duis efficitur ipsum ultricies mattis aliquam. Etiam vestibulum nulla vitae urna iaculis sagittis. 
 		</div>
@@ -117,8 +116,8 @@
 		<div class="texto">
 		<div class="imagen"></div><br>
 		<div class="space"></div>
-		<h1 class="listitle"><a class="listitle">PSP SILVER 887</a></h1><br><br><br><br>
-		<a href="#" class="button pink price click" onclick="prof()">10€</a><br><br><br>
+		<h1 class="listitle"><a class="listitle">Cadena bici</a></h1><br><br><br><br>
+		<a href="#" class="button pink price click" onclick="prof()">5€</a><br><br><br>
  Etiam ante sapien, volutpat et lobortis sed, porttitor eu neque. Cras nec aliquet purus. Suspendisse fermentum venenatis ligula, auctor feugiat metus ultrices in. Nam felis metus, eleifend eget scelerisque id, laoreet eget libero. <br> Quisque eget aliquet sapien, sed vulputate erat. Mauris eget pellentesque mauris. Duis efficitur ipsum ultricies mattis aliquam. Etiam vestibulum nulla vitae urna iaculis sagittis. 
  Mauris eget pellentesque mauris. Duis efficitur ipsum ultricies mattis aliquam. Etiam vestibulum nulla vitae urna iaculis sagittis. 
 		</div>
