--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>ciclo</title>
+	<title>ciclo</title>	<link rel="stylesheet" href="css/home.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/home.css">
+
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/animate.js"></script>
@@ -20,17 +20,25 @@
 			<input class="round" type="text" name="user" placeholder="User Name">
 			<br>
 			<br>
-			<input class="round" type="text" name="password" placeholder="Password">
+			<input class="round pw" type="password" name="password" placeholder="Password">
 			<br>
 			<br>
-			<input onclick="flip()" type="submit" value="Log In" class="round pink">
+			<input onclick="flap()" type="submit" value="Log In" class="round pink">
 		</div>
 	</div>
-	<header>
+	<header class="show">
 		<div class="right">
 			<a href="#" class="headbutton" >About</a>
-			<a href="#" class="headbutton" onclick="flip()">Sign in</a>
-			<a href="#" class="headbutton" >Log In</a>
+			<a href="#" class="headbutton" onclick="flip()">Log In</a>
+			<a href="#" class="headbutton" >Sign Up</a>
+		</div>
+	</header>
+	<header class="hide">
+		<a id="logo" class="animated pulse" href="index.html">
+		</a>
+		<div class="right">
+			<a href="#" class="headbutton" >Exit</a>
+			<a href="#" class="headbutton" >My Acount</a>
 		</div>
 	</header>
 	<main>
